--- a/etc/_팀교육/StrToolkit/UI_test/style.css
+++ b/etc/_팀교육/StrToolkit/UI_test/style.css
@@ -25,6 +25,14 @@ h1 {
     margin-bottom: 15px;
     text-align: left;
 }
+.form-group-wind {
+    margin-bottom: 15px;
+    text-align: left;
+}
+.form-group-seismic {
+    margin-bottom: 15px;
+    text-align: left;
+}
 
 label {
     display: block;
